styles/mockup.css
/* =========================================
UNIVERSAL STYLING
========================================= */
* {
  box-sizing: border-box;
}

body {
  --primary-bg-color: #eee0cb;
  --secondary-bg-color: #aff2ff;
  --ternary-bg-color: #fafafa;
  --text-color: #474747;
  --dark-mode-toggle: #aff2ff;
  position: relative;
  height: 100vh;
  margin: 0;
  background: linear-gradient(to bottom, var(--primary-bg-color) 0%, var(--primary-bg-color) 50%, var(--secondary-bg-color) 50%, var(--secondary-bg-color) 100%);
  color: var(--text-color);
  font: normal 16px/1.5 'Monteserrat',
    sans-serif;
  transition: background 0.2s linear;
  overflow: hidden;
}

body.dark {
  --primary-bg-color: #1a1a1a;
  --secondary-bg-color: #272727;
  --ternary-bg-color: #272727;
  --text-color: #aff2ff;
  --dark-mode-toggle: #474747;
  background: linear-gradient(to bottom, var(--primary-bg-color) 0%, var(--primary-bg-color) 50%, var(--secondary-bg-color) 50%, var(--secondary-bg-color) 100%);
  color: var(--text-color);
}

}


/* =========================================
"NAVIGATION"
========================================= */
.name {
  position: absolute;
  top: 10px;
  left: 14px;
  margin: 0;
  font-size: 1.13rem;
  font-weight: 600;
  letter-spacing: 0.6px;
}

.dark-mode-container {
  position: absolute;
  top: 16px;
  right: 20px;
}


/* DARK MODE TOGGLE */
.checkbox {
  opacity: 0;
  position: absolute;
}

.label {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 50px;
  height: 26px;
  padding: 5px;
  border-radius: 50px;
  background-color: var(--dark-mode-toggle);
  cursor: pointer;
  transform: scale(1.5);
}

.label .ball {
  position: absolute;
  top: 2px;
  left: 2px;
  height: 22px;
  width: 22px;
  border: 1.5px solid #474747;
  border-radius: 50%;
  background-color: #fafafa;
  transform: translateX(0px);
  transition: transform 0.2s linear;
}

.checkbox:checked+.label .ball {
  transform: translateX(24px);
}

.fa-moon {
  color: #f1c40f;
}

.fa-sun {
  color: #f39c12;
}


/* =========================================
CONVERTER
========================================= */
.container {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.currency {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.select-container {
  position: relative;
}

.select-container select {
  width: 70px;
  border: 0;
  color: var(--text-color);
  font-size: 22px;
  background: transparent;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
}

.currency input {
  border: 0;
  color: var(--text-color);
  font-size: 22px;
  text-align: right;
  background: transparent;
}

.middle {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--text-color);
}

.middle button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  border: 2px solid var(--text-color);
  border-radius: 50%;
  background-color: var(--ternary-bg-color);
  color: var(--text-color);
  font-size: 18px;
  cursor: pointer;
  transform: rotate(90deg);
}

.middle button:active {
  transform: rotate(90deg) scale(0.9);
}

.middle .rate {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  padding: 0 10px;
  border: 2px solid var(--text-color);
  border-radius: 50px;
  margin: 30px 15px 30px 25px;
  background-color: var(--ternary-bg-color);
  font-size: 18px;
}

select:focus,
input:focus,
button:focus {
  outline: 0;
}


/* =========================================
FOOTER
========================================= */
footer {
  position: absolute;
  bottom: 0;
  left: 50%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 320px;
  padding-bottom: 15px;
  margin-right: -50%;
  transform: translate(-50%);
}

.icon-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 36px;
  height: 40px;
  text-decoration: none;
}

.footer-fas {
  color: var(--text-color);
  font-size: 2.25rem;
}


/* =========================================
768 MEDIA QUERIES
========================================= */
}

